# hayonerobot

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  hayonerobot.code-workspace
.github/workflows/: ci.yml
docs/: architecture.md  bot-specifications.md
