[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
    "packages/api",
    "packages/ui-primitives",
]

[workspace.dependencies]
dioxus = { version = "0.7.1" }

# workspace
ui = { path = "packages/ui" }
ui-primitives = { path = "packages/ui-primitives" }
api = { path = "packages/api" }
