[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
    "packages/api",
]

[workspace.dependencies]
dioxus = { version = "0.7.1" }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false, features = [
    "router",
] }
strum = { version = "0.27.2", features = ["derive"] }

# workspace
ui = { path = "packages/ui" }
api = { path = "packages/api" }
